# EmotionDetect

./: README.md  cam.cpp
HaarCasCads/: ._Eyes.xml  ._Mouth.xml  ._Nose.xml  ._frontalFace10
HaarCasCads/frontalFace10/: ._haarcascade_frontalface_alt.xml  ._haarcascade_frontalface_alt2.xml  ._haarcascade_frontalface_alt_tree.xml  ._haarcascade_frontalface_default.xml
emotiondetecting2/: CMakeLists.txt  facialdetect2.cpp  smiledetect.cpp
raspicam-0.1.3/src/: raspicam_cv.cpp
raspicam-0.1.3/utils/: raspicam_cv_test.cpp
temphum/: .temphum.c.swo  .temphum.c.swp  CMakeLists.txt  temp  temphum.c
test/: simpletest_raspicam_cv.cpp
test1/: CMakeLists.txt  simpletest_raspicam_cv.cpp
